# pythonvsrust-kmeans

./: .cursorignore  .gitignore  CLAUDE.md  README.md  pixi.toml  runner.py  upgrades.md
docs/: _config.yml  about.md  algorithms.md  benchmarks.md  demo.md  index.md  parallel.md
notebooks/: analysis.ipynb
results/: benchmark_results_20250608_153059.csv  benchmark_results_20260517_215458.csv  benchmark_results_20260518_003517.csv  benchmark_results_20260609_112255.csv  parallel_scaling.csv  parallel_scaling_n1000.csv  parallel_scaling_n128000.csv  parallel_scaling_n16000.csv  parallel_scaling_n2000.csv  parallel_scaling_n256000.csv  parallel_scaling_n32000.csv  parallel_scaling_n4000.csv  parallel_scaling_n64000.csv  parallel_scaling_n8000.csv  summary_20250608_153059.txt  summary_20260517_215458.txt  summary_20260518_003517.txt  summary_20260609_112255.txt
specs/: MASTER_PLAN.md  README.md  analysis_facts.md  demo_layout_update.md  feature_1_kmeans_plus_plus.md  feature_2_parallel_rust.md  feature_3_convergence_animations.md  feature_4_quality_dashboard.md  feature_5_gh_pages_site.md  march_demo_overhaul.md  march_final.md  march_redesign_mistral.md  march_redesign_titan.md  march_rust_parallel_bench.md  march_viz_improvements.md  march_wasm_step_api.md
src/: README.md  analysis_audit.py  animate_convergence.py  bench_parallel_scaling.py  build_dashboard.py  generate_data.py  run_current_benchmark_suite.py  sync_assets.py  visualize_init_comparison.py  visualize_memory_breakdown.py  viz_style.py  (+3 more)
src/wasm_impl/: Cargo.toml
src/wasm_impl/src/: lib.rs
(+27 files in other folders)
