[package]
name    = "kmeans_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen              = "0.2"
console_error_panic_hook  = "0.1"
getrandom                 = { version = "0.2", features = ["js"] }
rand                      = "0.8"
rand_pcg                  = "0.3"

[profile.release]
opt-level = "z"
lto       = true
